Add the reutrn to index and add image
Added a return to index button at the top of the page and also added an image with alt text

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,11 @@
     <title>Lasagna Recipe</title>
 </head>
 <body>
+    <a href="../index.html">Return To Index</a>
     <h1>World's Best Lasagna</h1>
+    <img src="../images/AR-19344-Homemade-Lasagna-beauty-2x1-98da45c3a5854a2b8901a92123ccb6f1.jpg" alt="Image Of Finished Lasagna">
+    <h7>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptatem hic! Molestiae corrupti sed quia culpa deleniti velit voluptatem. In, aut. Minima atque ea asperiores, consequuntur quas reiciendis. Earum, reprehenderit.</h7>
+   <h3>Ingredients</h3>
     <ul><li>1 pound sweet Italian sausage</li>
 
 <li>¾ pound lean ground beef</li>
@@ -48,7 +52,7 @@
 <li>¾ cup grated Parmesan cheese</li></ul>
     </p>
 
-<p><ol>
+<p><h3>Steps</h3><ol>
     <li><h1>Step 1</h1>
         <p>Gather all your ingredients.</p></li>
             <li><h1>Step 2</h1>
