added chicken image
added a wokring image for chicken

--- a/recipes/Unbeliable_Chicken.html
+++ b/recipes/Unbeliable_Chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken Recipe</h1>
-    <img src="../../../Downloads/30522unbelievable-chickenlutzflcat4x3-a66f97fdabf443489e7cef519f47f638.webp"> 
+    <img src="../../../Downloads/Male_and_female_chicken_sitting_together.jpg"> 
     <ul>
        <li> cup cider vinegar</li>
 
