--- a/recipes/Unbeliable_Chicken.html
+++ b/recipes/Unbeliable_Chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken Recipe</h1>
-    <img src="../../../Downloads/Male_and_female_chicken_sitting_together.jpg"> 
+    <img src="../images/Male_and_female_chicken_sitting_together.jpg"> 
     <ul>
        <li> cup cider vinegar</li>
 
