added back to index
added back to index buttons on lasagna and chicken tenders

--- a/recipes/Unbeliable_Chicken.html
+++ b/recipes/Unbeliable_Chicken.html
@@ -6,8 +6,10 @@
     <title>Chicken Recipe</title>
 </head>
 <body>
+     <a href="../index.html">Return To Index</a>
     <h1>Chicken Recipe</h1>
-    <img src="../images/Male_and_female_chicken_sitting_together.jpg"> 
+    <img src="../images/Male_and_female_chicken_sitting_together.jpg" alt="Chicken Dish Image"> 
+    <h3>Ingridents</h3>
     <ul>
        <li> cup cider vinegar</li>
 
@@ -29,6 +31,7 @@ ground black pepper to taste
 </li><li> 
 6 skinless, boneless chicken breast halves </li>
     </ul>
+    <h3>Instructions</h3>
     <ol>
         <li></li>Mix cider vinegar, mustard, garlic, lime juice, lemon juice, brown sugar, salt, and pepper together in a large glass or ceramic bowl. Whisk in olive oil. Add chicken and toss evenly to coat. Cover, and marinate in the refrigerator for 8 hours to overnight.</li>
 
