--- a/recipes/chicken_tenders.html
+++ b/recipes/chicken_tenders.html
@@ -6,9 +6,12 @@
     <title>Chicken Tenders</title>
 </head>
 <body>
+     <a href="../index.html">Return To Index</a>
     <h1>Chicken Tenders</h1>
+  
     <img src="../images/images.jpeg" alt="chicken tender image">
-<ul>cooking spray
+<h3>Ingrideints</h3>
+    <ul>cooking spray
 
 <li>1 large egg</li>
 
@@ -19,7 +22,7 @@
 <li>8 chicken tenders</li>
 
 <li>freshly chopped parsley for garnish</li></ul>
-
+<h3>Instructions</h3>
 <ol>
     <li>Gather Ingridients</li>
 <li>Preheat an air fryer to 350 degrees F (175 degrees C). Coat basket with cooking spray.</li>
